# cartopy

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt  tasks.py
maptools/: ui.py
notebooks/: Census_Tracts.ipynb  campus_paths.ipynb  census-commute.ipynb  census-data.ipynb  census-education.ipynb  census-state-demographics.ipynb  charts.ipynb  clean-maker-address.ipynb  clean_maps.ipynb  lab-1.ipynb  lab-10-exercises.ipynb  lab-2-data-and-tables.ipynb  lab-3-exercises.ipynb  lab-3.ipynb  lab-4-exercises.ipynb  lab-4.ipynb  lab-5-problems.ipynb  lab-5-solutions.ipynb  lab-5.ipynb  lab-6-group-merge.ipynb  lab-6-problems.ipynb  lab-6.ipynb  lab-7-census-api.ipynb  lab-8-tigerline.ipynb  lab-8a-variable_search.ipynb  lab-9-charts.ipynb  lab-9-exercises.ipynb  langauge-tracts.ipynb  load-tiger.ipynb  mapmyrun.ipynb  metro-census.ipynb  nyc-metro-area.ipynb  nysed.ipynb  tigerweb.ipynb  uamaker.ipynb
notebooks/data/: campus.geojson  campus.qmd  city-points.geojson  large-us-cities.csv  li-districts.geojson  long-island-districts.geojson  metro.geojson  metro_places.geojson  ny_county_pop.csv  route6214332034.gpx  run.kml  state_demographics.csv  us-cities.csv  us-city-demographics.geojson  us-states.geojson  zipcodes-counties.csv
src/maptools/: address.py  census_vars.py  icons.py  tiger.py  ui.py
