[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "maptools"
version = "0.1.21"
authors = [
  { name="Matthew X. Curinga", email="mcuringa@adelphi.edu" },
]
description = "Python tools to extend geopandas, folium, and Leaflet for mapping and spatial analysis."
readme = "README.md"

requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Framework :: Jupyter",
    "Framework :: Matplotlib",
    "Framework :: IPython",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords=["opendata, schools, newyorkcity, maps"]

dependencies = [
"fiona",
"folium",
"geopandas",
"humanize",
"ipykernel",
"keyring",
"mapclassify",
"plotly",
"matplotlib",
"seaborn",
"scikit-learn",
"shapely",
"us"

]

[project.urls]
"Homepage" = "https://github.com/mcuringa/cartopy"
"Bug Tracker" = "https://github.com/mcuringa/cartopy/issues"
"Source" = "https://github.com/mcuringa/cartopy"
